--- a/css/main.css
+++ b/css/main.css
@@ -24,10 +24,7 @@ time, mark, audio, video {
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
     display: block;
-}
-body {
-    line-height: 1;
-}
+}max-width
 ol, ul {
     list-style: none;
 }
@@ -63,6 +60,12 @@ body{
       margin-top: 2rem;
       font-size: 1.25rem;
     }
+
+    .footer {
+      font-size: .25rem;
+      text-align: center;
+    }
+
 }
 
 /* Regras de estilo para dispositivos com largura menor que 576 pixels (celular) */
@@ -74,6 +77,10 @@ body{
     .main-logo{
       max-width: 130px;
     }
+
+    .footer {
+      font-size: .5rem;
+    }
 }
 
 @media (max-width: 1200px)
@@ -83,65 +90,86 @@ body{
         justify-content: center;
     }
 
-    .intro{
+    .intro--descricao{
         margin: 0;
+        font-size: .75rem;
     }
     .intro-heading{
         font-size: 1rem;
         line-height: 1rem;
     }
 
-    /* .social-media{
-      align-content: center;
-      flex-direction: column;
-      font-size: 1rem;
-    } */
+    .main-logo{
+      max-width: 30%;
+    }
+
+    .footer--note {
+      align-self: center;
+      font-size: .5rem;
+    }
 
 
 }
 
 body{
-  background-color:#ffecd4;
+  background: hsla(191, 60%, 89%, 1);
+  background: linear-gradient(315deg, hsla(191, 60%, 89%, 1) 0%, hsla(56, 59%, 86%, 1) 50%, hsla(25, 85%, 69%, 1) 100%);
   font-family: Barlow, Helvetica, sans-serif;
-  color: #423d38;
+  color: #4b4949;
+  height: 100%;
+  margin: 0;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
-
 
 .intro--descricao-callout{
   font-weight: 700;
   padding: 1rem;
 }
 
-.main {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  flex-wrap: wrap;
-  height: 200px;
-  width: 100%;
-}
-
 .main-hero{
-  margin: auto;
   left: 0px;
-  max-width: 65%;
+  max-width: 100%;
+  /* height: auto; */
+  z-index: 3;
+  grid-area: main-hero;
 }
 
 .main-logo{
-  max-width: 35%;
-  /* margin-right: 2rem; */
+  max-width: 60%;
+  height: auto;
+  grid-area: main-logo;
+  margin-right: 0rem;
+  margin-top: 3.75rem;
 }
 
+.main {
+  display: grid;
+  grid-template: 'main-hero 200px main-logo';
+  grid-template-columns: 2fr 1fr 2fr;
+  column-gap: 5px;
+  /* height: 300px; */
+  width: 100%;
+  z-index: -1;
+  margin-bottom: 2rem;
+}
+
+.intro {
+  display: flex;
+  margin-top: 2rem;
+  justify-content:center;
+}
 
 .intro--descricao{
   margin: 2rem;
   text-align: center;
-  font-size: 1.75rem;
+  font-size: 1.5rem;
   line-height: 2.5rem;
+  max-width: 100%;
+  margin-top: 2rem;
 }
 
 .social-media{
-  background-color:aqua;
   margin: auto;
   max-width: 100%;
   padding: 10px;
@@ -171,22 +199,24 @@ body{
 
 .social-media{
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   font-weight: 600;
   margin-top: 2rem;
   font-size: 1.25rem;
+  align-items:center;
 }
 
 .social-media--icons{
   width: 24px;
   text-align: center;
   margin-top: 2rem;
+  margin-right: 1rem;
 }
 
-.social-media a {
-
+.social-media a, .social-media a:link, .social-media a:visited {
   text-decoration: none;
+  color: #4b4949;
 }
 
 .social-media ul {
@@ -201,9 +231,25 @@ body{
 }
 
 .footer {
+  display: flex;
+  justify-content: center;
+
+  margin: auto;
+  font-weight: 400;
+  margin-bottom: 2rem;
+}
+
+
+
+.social-media ul li a {
+  display: flex;
+  justify-content: flex-start;
+  margin: 0;
+  padding-right: 1rem;
+  align-items: flex-end;
+  flex-direction: row;
+}
+
+.footer--note {
   font-size: 1rem;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-  text-align: center;
-  font-weight: 700;
 }
