--- a/css/main.css
+++ b/css/main.css
@@ -47,6 +47,19 @@ body{
     color: #423d38;
 }
 
+.navbar {
+    display: flex;
+    justify-content: space-around;
+    background-color: #f3a56d;
+    padding: 1rem 1rem;
+}
+
+.navbar > .nav-link:hover{
+    border-radius: 5px;
+    border-color: white;
+    font-weight: 500;
+}
+
 @media (max-width: 1024px) {
     .main{
         flex-direction: column;
@@ -161,7 +174,11 @@ body{
 }
 
 .intro--descricao-callout{
+    display: flex;
+    max-width: 100%;
+    justify-content: center;
   font-weight: 700;
+    font-size: 2rem;
   padding: 1rem;
 }
 
@@ -195,15 +212,24 @@ body{
   display: flex;
   margin-top: 2rem;
   justify-content:center;
+    flex-direction: row;
+    background-color: #299BA6;
+    color:#fff;
 }
 
-.intro--descricao{
+.intro--descricao h2{
   margin: 2rem;
   text-align: center;
   font-size: 1.5rem;
   line-height: 2.5rem;
   max-width: 100%;
   margin-top: 2rem;
+    font-weight: 700;
+}
+
+.intro-cidade p{
+    margin:2rem;
+    font-size: 1rem;
 }
 
 .social-media{
@@ -234,6 +260,43 @@ body{
   background-color: #81e281;
 }
 
+.patrocinio {
+    display: flex;
+    justify-content: space-around;
+    padding: 3rem;
+    background-image: url("../img/assets/Fitinhas_bg.png");
+    background-repeat: no-repeat;
+    background-position: 50% 0;
+    background-size: cover;
+}
+
+.patrocinio-texto h2{
+    font-size:1.25rem;
+    font-weight: 700;
+    margin-bottom: 1rem;
+    margin-right: .75rem;
+}
+.patrocinio-texto h2, .patrocinio-texto p{
+    color:#000;
+}
+
+.patrocinio a {
+    text-decoration: none;
+}
+
+.patrocinio button {
+     border: 0;
+    border-radius: 8px;
+    background-color: #182c93;
+    color:#fff;
+    font-weight: 500;
+}
+
+.patrocinio button:hover{
+    color: #fff;
+    border-radius: 8px;
+    background-color: #299BA6;
+}
 .social-media{
   display: flex;
   flex-direction: column;
@@ -251,7 +314,19 @@ body{
   margin-right: 1rem;
 }
 
-.social-media a, .social-media a:link, .social-media a:visited {
+.navbar button{
+    border:0;
+    background-color: #F2A56D;
+}
+
+.navbar button:hover{
+    border:white;
+
+    background-color: #299BA6;
+}
+
+
+.navbar a, .social-media a, .social-media a:link, .social-media a:visited {
   text-decoration: none;
   color: #4b4949;
 }
