ajuste na cor do btn de download do plano de patrocionio

--- a/css/main.css
+++ b/css/main.css
@@ -287,7 +287,7 @@ body{
 .patrocinio button {
      border: 0;
     border-radius: 8px;
-    background-color: #182c93;
+    background-color: #e0ecec;
     color:#fff;
     font-weight: 500;
 }
@@ -297,6 +297,7 @@ body{
     border-radius: 8px;
     background-color: #299BA6;
 }
+
 .social-media{
   display: flex;
   flex-direction: column;
