Add plano patrocinio pt (#13)
* fix: adjusting footer and the main section

* atualizando o embed do mapa e outros ajustes na seção de localizacao

* fix: fixing the navbar to the top

--- a/css/main.css
+++ b/css/main.css
@@ -51,7 +51,11 @@ body{
     display: flex;
     justify-content: space-around;
     background-color: #f3a56d;
-    padding: 1rem 1rem;
+    padding: .75rem;
+    position: fixed;
+    top: 0;
+    overflow: hidden;
+    width: 100%;
 }
 
 .navbar > .nav-link:hover{
@@ -118,10 +122,14 @@ body{
     text-align: center;
     padding-bottom: 1rem;
   }
+
+  .navbar {
+    flex-direction: row;
+}
 }
 
 /* Regras de estilo para dispositivos com largura menor que 768 pixels (tablet) */
-@media (max-width: 767px) {
+@media (max-width: 860px) {
     body {
       font-size: 16px;
     }
@@ -133,13 +141,23 @@ body{
       font-size: 1.25rem;
     }
 
-    .footer {
-      font-size: .25rem;
-      text-align: center;
-      margin-bottom: 0px;
-      position: fixed;
-      bottom: 0px;
-      width: 100%;
+    .main-hero{
+      display: none;
+    }
+
+    .main--descricao-callout{
+      font-size: .75rem;
+      color:blue;
+    }
+
+    .localizacao{
+      display: flex;
+      flex-direction: column;
+    }
+
+    .localizacao--texto {
+      padding-bottom: 1rem;
+      align-items: center;
     }
 }
 
@@ -153,12 +171,6 @@ body{
       max-width: 130px;
     }
 
-    .footer {
-      font-size: .5rem;
-      bottom: 0px;
-      position: fixed;
-      width: 100%;
-    }
 }
 
 
@@ -173,39 +185,42 @@ body{
   background-attachment: fixed;
 }
 
-.intro--descricao-callout{
-    display: flex;
-    max-width: 100%;
-    justify-content: center;
+.main--descricao-callout{
   font-weight: 700;
     font-size: 2rem;
   padding: 1rem;
+  color: red;
+}
+
+
+.main-chamada {
+  display: flex;
+  flex-direction: column;
+  justify-content:space-around;
+  align-items: center;
+}
+
+.main {
+  display: flex;
+  justify-content: space-around;
+  max-width: 100%;
+  z-index: -1;
+  margin-bottom: 2rem;
 }
 
 .main-hero{
   left: 0px;
-  max-width: 100%;
-  /* height: auto; */
-  z-index: 3;
-  grid-area: main-hero;
+  position: absolute;
+  z-index: -1;
+  max-height: 465px;
 }
 
 .main-logo{
   max-width: 60%;
   height: auto;
-  grid-area: main-logo;
   margin-right: 0rem;
-  margin-top: 3.75rem;
-}
-
-.main {
-  display: grid;
-  grid-template: 'main-hero 200px main-logo';
-  grid-template-columns: 2fr 1fr 2fr;
-  column-gap: 5px;
-  width: 100%;
   z-index: -1;
-  margin-bottom: 2rem;
+  margin-top: 3.75rem;
 }
 
 .intro {
@@ -270,12 +285,13 @@ body{
     background-size: cover;
 }
 
-.patrocinio-texto h2{
+.patrocinio-texto h2, .localizacao--texto h2{
     font-size:1.25rem;
     font-weight: 700;
     margin-bottom: 1rem;
     margin-right: .75rem;
 }
+
 .patrocinio-texto h2, .patrocinio-texto p{
     color:#000;
 }
@@ -296,6 +312,19 @@ body{
     color: #fff;
     border-radius: 8px;
     background-color: #299BA6;
+}
+
+.localizacao {
+  display: flex;
+  justify-content: space-evenly;
+  padding: 3rem;
+  align-items:center;
+  background-color:hsla(25, 85%, 69%, 1);
+}
+
+.mapouter{
+  border-radius: 20px;
+  max-width: 100%;
 }
 
 .social-media{
@@ -354,11 +383,14 @@ body{
 
 .footer {
   display: flex;
+  align-items: center;
   justify-content: center;
-  font-weight: 400;
-  margin-bottom: 2rem;
-  margin: auto;
+  flex-direction: column;
   text-align: center;
+  background: red;
+  color: #fff;
+  max-width: 100%;
+  line-height: 3rem;
 }
 
 
