fix: atualizando descrição da cidade

--- a/css/main.css
+++ b/css/main.css
@@ -247,6 +247,10 @@ body{
     font-size: 1rem;
 }
 
+.intro-cidade--callout {
+  text-align: center;
+}
+
 .social-media{
   margin: auto;
   max-width: 100%;
