adicionando section main-chamada no header

--- a/css/main.css
+++ b/css/main.css
@@ -214,8 +214,8 @@ body{
   display: flex;
   justify-content: space-around;
   max-width: 100%;
-  z-index: -1;
   margin-bottom: 2rem;
+  flex-direction: column;
 }
 
 .main-hero{
