--- a/css/main.css
+++ b/css/main.css
@@ -300,26 +300,30 @@ body{
   background-color: #81e281;
 }
 
+/* PATROCINIO */
+
 .sponsor {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    padding: 3rem;
-    background-image: url("../img/assets/Fitinhas_bg.png");
-    background-repeat: no-repeat;
-    background-position: 70% 0;
-    background-size: cover;
+    text-align: center;
+    padding: 1rem;
 }
 
 .sponsor h2, .localizacao--texto h2 {
   padding-bottom: 1rem;
-  font-size: 28px;
+  font-size: 1.75rem;
   font-weight: 700;
   color:#141414;
 }
-  .patrocinio--section {
-    display: flex;
+.patrocinio--section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+  column-gap: 2rem;
 }
+
 
 .patrocinio-texto h3, .localizacao--texto h3{
     font-size:1.25rem;
@@ -332,37 +336,12 @@ body{
     color:#000;
 }
 
-.sponsor a {
-    text-decoration: none;
-    color:#141414;
+.patrocinio-texto p{
+  font-size: 1rem;
+  margin-bottom: 1rem;
+  font-weight: 500;
 }
 
-.sponsor a:hover {
-  text-decoration: none;
-  color: #fff;
-}
-
-.sponsor button {
-    border: 0;
-    border-radius: 8px;
-    background-color: #e0ecec;
-    font-weight: 500;
-    margin-top: .5rem;
-    padding: 8px;
-}
-
-.sponsor button:hover{
-    border-radius: 8px;
-    background-color: #299BA6;
-    border:4px solid hsla(56, 59%, 86%, 1)
-}
-
-.sponsor button:active{
-  color:#141414;
-  border-radius: 8px;
-  background-color:hsla(56, 59%, 86%, 1);
-  border:4px solid #299BA6;
-}
 
 .localizacao {
   display: flex;
