Fiz a remoção de conflitos da página index.html, atualizei o link da nav 'como patrocinar' adicionando o 'id='sponsor' ao article classe='sponsor', também adicionei um padding-top: 3rem; para que o usuario consiga ver toda a seção de patrocinio ao cliclar no botão. Atualizei também algumas classes que estavam quebrando o site na main

--- a/css/main.css
+++ b/css/main.css
@@ -271,6 +271,7 @@ body{
    justify-content: space-evenly;
    text-align: center;
    padding: 1rem;
+   padding-top: 3rem;
    flex-direction: column;
 }
 
