--- a/css/main.css
+++ b/css/main.css
@@ -312,7 +312,7 @@ body{
 
 
 .sponsor-texto h3, .sponsor-texto p{
-    color:#000;
+  color:#000;
 }
 
 .sponsor-texto p{
@@ -326,10 +326,17 @@ body{
 }
 
 .sponsors-flex {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
+
+@media (min-width: 768px) {
+  .sponsors-flex {
+    flex-direction: row;
+  }
 }
 
 .localizacao {
