--- a/css/main.css
+++ b/css/main.css
@@ -49,21 +49,67 @@ body{
   background-color: white;
 }
 
+
 .navbar {
-    display: flex;
-    justify-content: space-around;
-    background-color: #f7931e;
-    padding: .75rem;
-    position: fixed;
-    top: 0;
-    overflow: hidden;
-    width: 100%;
+  display: flex;
+  justify-content: space-around;
+  background-color: #f7931e;
+  padding: .75rem;
+  position: fixed;
+  top: 0;
+  overflow: hidden;
+  width: 100%;
 }
+
 .navbar > .nav-link:hover{
-    border-radius: 5px;
-    border-color: white;
-    font-weight: 500;
+  border-radius: 5px;
+  border-color: white;
+  font-weight: 500;
 }
+
+.iconoir-menu {
+  display: none;
+}
+
+@media screen and (max-width: 768px) {
+
+  .navbar a:not(:last-child) {display: none;}
+  .navbar a.icon {
+    color: black;
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .navbarresponsive {
+    background-color: #f7931e;
+  }
+  .navbarresponsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding: 20px;
+  }
+  .navbarresponsive .nav-link {
+    float: none;
+    display: flex;
+    text-align: left;
+    text-decoration: none;
+    color: white;
+    padding: 20px;
+  }
+  .navbarresponsive .nav-link:hover {
+    background-color: #FBC689;
+    color: #141414;
+  }
+
+  .navbarresponsive .nav-link:focus {
+    box-shadow: 0 0 10px#6177E5, 0 0 20px#6177E5, 0 0 40px#6177E5;
+    background-color: #6177E5;
+  }
+}
+
 @media (max-width: 1024px) {
     .main{
         flex-direction: column;
@@ -314,8 +360,13 @@ body{
   margin-top: 1rem;
 }
 
-.sponsor-texto h3, .sponsor-texto p{
+.sponsor-texto h3,.sponsors-list h4, .sponsor-texto p{
   color:#000;
+}
+
+ h4 {
+  color:#000;
+  font-weight: 700;
 }
 
 .sponsor-texto p{
@@ -324,12 +375,12 @@ body{
   font-weight: 500;
 }
 
-.sponsors-list--apoiadores {
+.sponsors-list__apoiadores {
   padding-top: 3rem;
 
 }
 
-.sponsors-flex {
+.sponsors-flex, .sponsors-list__bronze {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -338,13 +389,13 @@ body{
 }
 
 @media (min-width: 768px) {
-  .sponsors-flex {
+  .sponsors-flex, .sponsors-list__bronze{
     flex-direction: row;
   }
 }
 
 @media (min-width: 1440px) {
-  .sponsors-flex {
+  .sponsors-flex, .sponsors-list__bronze {
     gap: 5rem;
   }
 }
