--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,7 @@ table {
     border-spacing: 0;
 }
 body{
-    background-color:#ffecd4;
+    /* background-color:#ffecd4; */
     font-family: Barlow, Helvetica, sans-serif;
     color: #423d38;
 }
@@ -53,7 +53,7 @@ body{
 .navbar {
   display: flex;
   justify-content: space-around;
-  background-color: #f7931e;
+  /* background-color: #f7931e; */
   padding: .75rem;
   position: fixed;
   top: 0;
@@ -98,7 +98,7 @@ body{
     padding: 20px;
   }
   .navbarresponsive .nav-link:hover {
-    background-color: #FBC689;
+    /* background-color: #FBC689; */
     color: #141414;
   }
 
@@ -211,8 +211,8 @@ body{
   }
 }
 body{
-  background: hsla(191, 60%, 89%, 1);
-  background: linear-gradient(315deg, hsla(191, 60%, 89%, 1) 0%, hsla(56, 59%, 86%, 1) 50%, hsla(25, 85%, 69%, 1) 100%);
+  /* background: hsla(191, 60%, 89%, 1);
+  background: linear-gradient(315deg, hsla(191, 60%, 89%, 1) 0%, hsla(56, 59%, 86%, 1) 50%, hsla(25, 85%, 69%, 1) 100%); */
   font-family: Barlow, Helvetica, sans-serif;
   color: #4b4949;
   height: 100%;
@@ -259,8 +259,8 @@ body{
   margin-top: 2rem;
   justify-content:center;
   flex-direction: row;
-  background-color: #299BA6;
-  color:#fff;
+  /* background-color: #299BA6; */
+  color:#141414;
   max-width: 900px;
   margin: 0 auto;
 }
